[package]
name = "ahagon"
version = "0.1.0"
authors = ["mikopits <mikopits@gmail.com>"]

[dependencies]
bodyparser = "0.7"
env_logger = "0.4"
hyper = "0.10"
iron = "0.5"
log = "0.3"
github-rs = "0.4"
persistent = "0.3"
router = "0.5"
#rusqlite = "0.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.4"
urlencoded = "0.5"

[lib]
name = "ahagon"
path = "src/lib.rs"

[[bin]]
name = "ahagon_bot"
path = "src/bin/bin.rs"
